# MAT240B-2021-Assignment-1

./: .gitignore  CMakeLists.txt  README.md  cumulative-sum.cpp  difference.cpp  normalize.cpp  remove-bias.cpp  reverse.cpp  sawtooth-sweep.cpp  sawtooth.cpp  sine-sweep.cpp  sine.cpp  square-sweep.cpp  square.cpp  triangle-sweep.cpp  triangle.cpp
